# AI_for_geopolitics

./: .dockerignore  .gitattributes  .gitignore  .mcp.json  AI_for_Geopolitics_Etat_de_lart.docx  CLAUDE.md  CLAUDE_SETUP.md  Dockerfile  LICENSE  PR_BODY.md  PR_BODY_VAGUE2.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  serve.py
.claude/: launch.json  settings.json
agents/: __init__.py  base_agent.py  game_master.py  human_agent.py  judge.py  llm_agent.py  organization.py  prompts.py  rule_based_agent.py
app/: __init__.py  campaign_api.py  charts.py  daily_api.py  dashboard.py  game_api.py  game_schemas.py  game_sse.py  main.py  market_api.py  request_limits.py  sources_api.py
core/: __init__.py  consequences.py  country_state.py  decisions.py  events.py  risk.py  rounds.py  world_state.py
docs/: AUDIT_SIMPLICITE.md  BRIEFS_CLAUDE_CODE.md  DETTE_TECHNIQUE.md  DISPATCH_2026-07-14.md  DISPATCH_2026-07-15.md  DISPATCH_2026-07-15_G18-G23.md  DISPATCH_REFONTE_GAMEPLAY.md  ETAT_DE_LART_PROJET_2026-07.md  JEU_VS_MOTEUR.md  PLAN_AMELIORATIONS_GAMEPLAY.md  PLAN_JEU.md  PRINCIPE_SIMPLICITE.md  PROTOCOLE_PERF_GLOBE.md  README.md  RECHERCHE_FONCTIONNALITES.md  RECHERCHE_FONCTIONNALITES_2.md  REFONTE_PLAN.md  RUNBOOK_THEATRE_GLOBE.md  RUNBOOK_VAGUE1_GIT.md  SESSION_HANDOFF.md  data_governance.md  roadmap_features.md  spec_alignment_frontier.md  spec_dialogue_integrity.md  spec_market.md  spec_session_rebuild.md  spec_theatre_globe.md  spec_trajectory.md  vision.md
inference/: __init__.py  backend.py  bench.py  capturing_backend.py  json_extract.py  metered_backend.py  mock_backend.py  model_pool.py  ollama_backend.py  pricing.py  telemetry.py
infra/: README.md  kind-cluster.yaml
ingestion/: __init__.py  build.py  normalize.py
legacy/: __init__.py  app.py  game.py
market/: __init__.py  engine.py  flash.py  forecaster.py  lmsr.py  models.py  predicates.py  resolution.py  scoring.py  store.py  supabase_store.py
rag/: __init__.py  brief.py  corpus.py  demo.py  documents.py  embedder.py  eval.py  lexical.py  retriever.py  rrf.py  vector_index.py
research/: __init__.py  runner.py  store.py
scripts/: benchmark_research_models.py  db_maintenance.py  dialogue_metrics.py  downsample-textures.mjs  install_research_models.ps1  profile_research_scaling.py  smoke_storyteller_mistral.py  smoke_theatre_mistral.py
simulation/: __init__.py  action_space.py  alignment.py  alliances.py  campaign.py  clock.py  compute.py  corrigibility.py  country_forge.py  crisis.py  daily.py  difficulty.py  diplomacy.py  drift_game.py  dyadic_tournament.py  engagement.py  epistemic.py  escalation.py  fog.py  geo.py  (+38 more)
(+497 files in other folders)
