[project]
name = "ai-for-geopolitics"
version = "0.0.1"
description = "Simulation géopolitique agentique — moteur déterministe (Phase 0)."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "ollama>=0.4",  # client backend d'inférence local (P1)
]

[tool.setuptools.packages.find]
include = ["app*", "core*", "agents*", "inference*", "rag*", "simulation*", "storage*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
